publications text overflow fix 	modified:   src/publications/publication-my-first-publication.md 	modified:   src/styles/publications.css

--- a/src/styles/publications.css
+++ b/src/styles/publications.css
@@ -14,13 +14,14 @@
 }
 
 .publication__title {
-  margin: 0;
+  margin: 0px;
+  
   padding-top: 10px;
   padding-left: 13px;
   padding-right: 13px;
   padding-bottom: 10px;
 
-  height: 57px;
+  height: 55px;
   
   font-family: var(--font-family-karelia-bold);
   font-weight: 700;
@@ -28,6 +29,17 @@
   line-height: 18.94px;
 
   border-bottom: 1px solid var(--color-borders);
+
+  display: -webkit-box;
+
+  word-break: keep-all;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  text-overflow: -o-ellipsis-lastline;
 }
 
 .publication__year {
@@ -53,7 +65,6 @@
 }
 
 .publication__description {
-
   height: 87px;
 
   padding-top: 6px;
@@ -61,6 +72,8 @@
   padding-bottom: 10px;
 
   border-bottom: 1px solid var(--color-borders);
+
+  overflow-y: scroll;
 }
 
 .publication__link {
